# AgentCoolie

./: .env.example  .gitignore  .replit  AGENT_TOOLS_QUICKSTART.md  AGENT_TOOLS_REFERENCE.md  CLEANUP_COMPLETE.md  CODE_REVIEW_FIXES.md  DEPLOYMENT.md  DEPLOY_FIREBASE_RAILWAY.md  DEPLOY_QUICK.md  DEPLOY_RAILWAY_ONLY.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_COMPLETE.md  Dockerfile  FILE_CLEANUP_ANALYSIS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  GIT_SECURITY_SETUP.md  IMPROVEMENTS_SUMMARY.md  ISSUES_FIXED.md  KNOWN_ISSUES.md  MARKDOWN_RENDERING.md  MIGRATION.md  PROJECT_ANALYSIS.md  PROJECT_KNOWLEDGE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  README_UPDATES.md  SERVER_SETUP.md  STARTUP_GUIDE.md  START_HERE.md  SYSTEM_PROMPTS.md  TESTING_GUIDE.md  TESTING_REPORT.md  demo_agent_tools.py  design_guidelines.md  docker-compose.yml  firebase.json  (+15 more)
backend/: .dockerignore  .env.example  DATABASE_SCHEMA.md  Dockerfile  README.md  pyproject.toml  requirements-pinned.txt  requirements.txt  test_imports.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agents.py
backend/app/core/: __init__.py  body_limit.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  auth.py  billing.py  chat.py  gmail.py  integrations.py  notifications.py  oauth.py  preferences.py  reminders.py  search.py  tasks.py  website.py  whatsapp.py  youtube.py
backend/app/services/: __init__.py  agent_safety_service.py  ai_service.py  call_reminder_service.py  call_task_scheduler.py  chat_workflow_service.py  firebase_service.py  long_term_memory_service.py  n8n_service.py  plan_service.py  redis_memory_service.py  runtime_config_service.py  supabase_service.py  task_execution_service.py  task_intent_service.py  tool_audit_service.py  tracing_service.py  web_search_service.py
backend/sql/: app_secrets.sql  chat_messages_conversation_id.sql  core_app_tables.sql  long_term_memories.sql  plans_and_usage.sql  tasks_execution_status.sql  user_credentials.sql  user_credentials_gmail_compat.sql  user_preferences.sql
call-reminder-test/: .env.example  README.md  send_twilio_call.py
client/: Dockerfile  README.md  index.html  nginx.conf
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  ChatBubble.tsx  ChatInput.tsx  ErrorBoundary.tsx  NotificationBell.tsx  ScheduledTaskRunner.tsx  TaskCard.tsx  ThemeToggle.tsx  TypingIndicator.tsx  WebsiteOpener.tsx  WhatsappConnect.tsx
client/src/lib/: api.ts  (+2 more)
shared/: schema.ts
(+21 files in other folders)
